details page added

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -2,5 +2,8 @@
   "app": {
     "mapNav": "карта",
     "title": "Литературная Тюмень"
+  },
+  "details":{
+    "title": "страница о писателе"
   }
 }
