--- a/locales/ru.json
+++ b/locales/ru.json
@@ -3,7 +3,8 @@
     "mapNav": "Карта",
     "homeNav": "Главное",
     "details": "Детали",
-    "title": "Литературная Тюмень"
+    "title": "Литературная Тюмень",
+    "admin": "Админ"
   },
   "details":{
     "title": "страница о писателе",
@@ -22,5 +23,9 @@
   "home":{
     "interestingThisWeek":"Интересное на этой неделе",
     "nearMe": "Недалеко от меня"
+  },
+  "admin":{
+    "header": "Панель администрирования",
+    "mapPoints": "Маркеры на карте"
   }
 }
