--- a/locales/ru.json
+++ b/locales/ru.json
@@ -4,7 +4,8 @@
     "homeNav": "Главное",
     "details": "Детали",
     "title": "Литературная Тюмень",
-    "admin": "Админ"
+    "admin": "Админ",
+    "feedback": "Обсудить"
   },
   "details":{
     "title": "страница о писателе",
@@ -27,5 +28,8 @@
   "admin":{
     "header": "Панель администрирования",
     "mapPoints": "Маркеры на карте"
+  },
+  "feedback":{
+    "title": "Здесь вы можете оставить отзыв и обсудить проект «Литературная карта тюмени»"
   }
 }
