--- a/locales/ru.json
+++ b/locales/ru.json
@@ -30,6 +30,6 @@
     "mapPoints": "Маркеры на карте"
   },
   "feedback":{
-    "title": "Здесь вы можете оставить отзыв и обсудить проект «Литературная карта тюмени»"
+    "title": "Здесь вы можете оставить отзыв и обсудить проект «Литературная карта Тюмени»"
   }
 }
