--- a/locales/ru.json
+++ b/locales/ru.json
@@ -27,7 +27,14 @@
   },
   "admin":{
     "header": "Панель администрирования",
-    "mapPoints": "Маркеры на карте"
+    "mapPoints": "Маркеры на карте",
+    "addMarker": "Новый маркер на карту",
+    "editMarker": "Изменить",
+    "item":{
+      "edit": "Менять",
+      "preview": "Смотерть",
+      "add": "Добавить"
+    }
   },
   "feedback":{
     "title": "Здесь вы можете оставить отзыв и обсудить проект «Литературная карта Тюмени»"
