--- a/locales/ru.json
+++ b/locales/ru.json
@@ -34,6 +34,12 @@
       "edit": "Менять",
       "preview": "Смотерть",
       "add": "Добавить"
+    },
+    "edit":{
+      "title": "Маркер на карте",
+      "cancel": "Отмена",
+      "save": "Сохранить",
+      "color": "Цвет"
     }
   },
   "feedback":{
