marker control buttons added

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -28,7 +28,7 @@
   "admin":{
     "header": "Панель администрирования",
     "mapPoints": "Маркеры на карте",
-    "addMarker": "Новый маркер на карту",
+    "controls": "Что будем делать?",
     "editMarker": "Изменить",
     "item":{
       "edit": "Менять",
@@ -45,7 +45,9 @@
       "image": "Иконка",
       "data": "Название",
       "thumb": "Файл маркера",
-      "full": "Файл полной статьи"
+      "full": "Файл полной статьи",
+      "apply": "Применить",
+      "revert": "Сбросить"
     }
   },
   "feedback":{
