admin added dmitry

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -30,6 +30,7 @@
     "mapPoints": "Маркеры на карте",
     "controls": "Что будем делать?",
     "editMarker": "Изменить",
+    "signOut": "Выйти",
     "item":{
       "edit": "Менять",
       "preview": "Смотерть",
