marker updated on icon change

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -45,8 +45,8 @@
       "coordinatesLon": "Долгота",
       "image": "Иконка",
       "data": "Название",
-      "thumb": "Файл маркера",
-      "full": "Файл полной статьи",
+      "thumb": "Статья кратко, для маркера на карте",
+      "full": "Полный текст статьи",
       "apply": "Применить",
       "revert": "Сбросить"
     }
