more icon explanations

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -44,6 +44,7 @@
       "coordinatesLat": "Широта",
       "coordinatesLon": "Долгота",
       "image": "Иконка",
+      "images": "Какие иконки?",
       "data": "Название",
       "thumb": "Статья кратко, для маркера на карте",
       "full": "Полный текст статьи",
