--- a/locales/ru.json
+++ b/locales/ru.json
@@ -24,7 +24,8 @@
   },
   "home":{
     "interestingThisWeek":"Интересное на этой неделе",
-    "nearMe": "Недалеко от меня"
+    "nearMe": "Недалеко от меня",
+    "search": "Очень много интересного?"
   },
   "admin":{
     "header": "Панель администрирования",
